updated changes made a while ago

--- a/app/views/layouts/author.html.erb
+++ b/app/views/layouts/author.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> The NewsPanel | <%= yield(:page_title) %> </title>
+    <title> IBL | <%= yield(:page_title) %> </title>
     <title><%= @meta_title ? @meta_title : ApplicationController::BRAND_NAME %></title>
 
       <% if @meta_description.present? %>
@@ -11,10 +11,10 @@
     <%= csrf_meta_tags %>
 
     <meta name="Viewport"           content="width=device-width, initial-scale=1.0">
-    <meta property="og:image"       content="<%= asset_url "https://s17.postimg.org/ccr5g4sn3/thenewspanellogo.png"%>"/>
+    <meta property="og:image"       content="<%= asset_url "https://s17.postimg.org/ccr5g4sn3/ibllogo.png"%>"/>
     <meta property="og:title"       content="The Newspanel | Global Trending News">
     <meta property="og:type"        content="article">
-    <meta property="og:url"         content="http://www.thenewspanel.com">
+    <meta property="og:url"         content="http://www.ibl">
     <meta property="og:site_name"   content="The NewsPanel">
     <meta property="fb:app_id"      content="133367770708729">
     <meta property="og:description" content="The Newspanel brings together news and popular stories from the world’s most respected publishers.
