--- a/app/views/newsroom/posts/show.html.erb
+++ b/app/views/newsroom/posts/show.html.erb
@@ -34,7 +34,7 @@
       data-show-faces="true">
     </div>
     <!-- <%= social_share_button_tag(@posts.title)%>
-    <%= link_to 'Share', 'https://www.facebook.com/sharer/sharer.php?u=http://www.thenewspanel.com/', target: "_blank", class: 'btn btn-primary' %> -->
+    <%= link_to 'Share', 'https://www.facebook.com/sharer/sharer.php?u=http://www.ibl/', target: "_blank", class: 'btn btn-primary' %> -->
     <div id="disqus_thread"></div>
     <noscript>
       Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
@@ -55,7 +55,7 @@
 
   (function() { // DON'T EDIT BELOW THIS LINE
   var d = document, s = d.createElement('script');
-  s.src = 'https://thenewspanel-1.disqus.com/embed.js';
+  s.src = 'https://ibl-1.disqus.com/embed.js';
   s.setAttribute('data-timestamp', +new Date());
   (d.head || d.body).appendChild(s);
   })();
