--- a/app/views/layouts/newsroom.html.erb
+++ b/app/views/layouts/newsroom.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= yield(:page_title) %> | NewsPanel</title>
+    <title><%= yield(:page_title) %> | IBL</title>
     <title><%= @meta_title ? @meta_title : ApplicationController::BRAND_NAME %></title>
       <% if @meta_description.present? %>
         <meta name=”description” content=”<%= @meta_description %>”>
@@ -12,7 +12,7 @@
     <meta property="og:type"                content="article">
     <meta property="og:description"         content="The Newspanel brings together news and popular stories from the world’s most respected publishers.
     There’s a story for everyone—from politics to popular recipes, travel to tech, business to entertainment. Reading the news has never been easier especially with everything in one panel.">
-    <meta property="og:url"                 content="http://www.thenewspanel.com/">
+    <meta property="og:url"                 content="http://www.ibl/">
     <meta property="og:image"               content="http://rustrade.org.uk/rus/wp-content/uploads/obzor-press.jpg">
     <!-- <meta property="og:image"               content="https://mmaricordia.com/wp-content/uploads/2014/03/images.jpg"> -->
     <meta property="og:site_name"           content="The Newspanel">
